Basic UI and items fetch in place

--- a/frappe/public/css/desk.css
+++ b/frappe/public/css/desk.css
@@ -978,6 +978,13 @@ input[type="checkbox"]:checked:before {
   font-size: 13px;
   color: #3b99fc;
 }
+.multilink-empty-state {
+  min-height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
 @-moz-document url-prefix() {
   input[type="checkbox"] {
     visibility: visible;
