--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -894,8 +894,8 @@ input[type="checkbox"] {
 	}
 }
 
-.multilink-empty-state{
-	min-height: 200px;
+.multiselect-empty-state{
+	min-height: 400px;
     display: flex;
     align-items: center;
     justify-content: center;
