--- a/frappe/website/doctype/web_form/templates/web_form.html
+++ b/frappe/website/doctype/web_form/templates/web_form.html
@@ -100,7 +100,7 @@
 		name="{{ field.fieldname }}" value="{{ value(field, _doc) }}">
 	{% elif field.fieldtype == "HTML" and field.options %}
 	<div class="form-group">
-		{{ field.options }}
+		{{ _(field.options) }}
 	</div>
 	{% elif field.fieldtype in ("Data", "Date", "Datetime", "Int", "Float") %}
 	<div class="form-group{% if field.reqd %} has-error{% endif %}">
