--- a/frappe/templates/web.html
+++ b/frappe/templates/web.html
@@ -13,7 +13,7 @@
 		<div class="{% if show_sidebar %}page-content with-sidebar col-sm-9{% else %} page-content col-sm-12 {% endif %}">
 			<div class="page-content-wrapper">
 				<div class="row page-head">
-					<div class='col-sm-12'>
+					<div class='col-sm-12 hidden-xs'>
 						{% if not no_breadcrumbs and parents %}
 						<div class="page-breadcrumbs">
 							{% block breadcrumbs %}
