--- a/frappe/public/css/website.css
+++ b/frappe/public/css/website.css
@@ -817,6 +817,7 @@ a.active {
 .page-head h1 {
   letter-spacing: 0.5px;
   font-size: 20px;
+  margin: auto;
 }
 .btn-next-wrapper {
   margin-top: 60px;
