--- a/frappe/public/css/desk.css
+++ b/frappe/public/css/desk.css
@@ -583,6 +583,14 @@ fieldset[disabled] .form-control {
 .file-upload .uploaded-filename-display {
   max-width: 150px;
 }
+.file-upload .file-public-column {
+  flex: 0 0 36px;
+  order: -1;
+  justify-content: flex-end;
+}
+.file-upload .file-public-column input[type="checkbox"] {
+  margin-right: 0;
+}
 .frappe-rtl input,
 .frappe-rtl textarea {
   direction: rtl;
