--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -426,6 +426,17 @@ textarea.form-control {
 	.uploaded-filename-display {
 		max-width: 150px;
 	}
+
+	.file-public-column {
+		flex: 0 0 36px;
+		order: -1;
+		justify-content: flex-end;
+		
+		input[type="checkbox"] {
+			margin-right: 0;
+		}
+	}
+
 }
 
 .frappe-rtl input ,.frappe-rtl textarea {
