--- a/frappe/public/js/frappe/form/templates/form_dashboard.html
+++ b/frappe/public/js/frappe/form/templates/form_dashboard.html
@@ -4,7 +4,8 @@
 	<div class="progress-area hidden form-dashboard-section">
 	</div>
 	<div class="form-heatmap hidden form-dashboard-section">
-		<div id="heatmap-{{ frm.doctype }}"></div>
+		{% doctype = frm.doctype.replace(" ", "_") %}
+		<div id="heatmap-{{ doctype }}"></div>
 		<div class="text-muted small heatmap-message hidden"></div>
 	</div>
 	<div class="form-chart form-dashboard-section hidden"></div>
