--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -431,7 +431,7 @@ textarea.form-control {
 		flex: 0 0 36px;
 		order: -1;
 		justify-content: flex-end;
-		
+
 		input[type="checkbox"] {
 			margin-right: 0;
 		}
@@ -894,6 +894,7 @@ input[type="checkbox"] {
 	}
 }
 
+// Will not be required after commonifying lists with empty state
 .multiselect-empty-state{
 	min-height: 300px;
     display: flex;
