[minor] allow method object to return its own response object

--- a/frappe/public/css/form.css
+++ b/frappe/public/css/form.css
@@ -497,6 +497,10 @@ h6.uppercase,
 }
 .frappe-control pre {
   white-space: pre-wrap;
+  background-color: inherit;
+  border: none;
+  padding: 0px;
+  margin: 0px;
 }
 .hide-control {
   display: none !important;
