--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -625,6 +625,10 @@ h6.uppercase, .h6.uppercase {
 
 	pre {
 		white-space: pre-wrap;
+		background-color: inherit;
+		border: none;
+		padding: 0px;
+		margin: 0px;
 	}
 }
 
