--- a/frappe/public/less/list.less
+++ b/frappe/public/less/list.less
@@ -487,6 +487,12 @@
 .list-item-table {
 	border: 1px solid @border-color;
 	border-radius: 3px;
+
+	.empty-state {
+		min-height: 100px;
+		text-align: center;
+		line-height: 100px;
+	}
 }
 
 .list-item {
@@ -519,7 +525,6 @@
 
 	input[type=checkbox] {
 		margin: 0;
-		margin-right: 5px;
 		flex: 0 0 12px;
 	}
 
