--- a/frappe/public/js/frappe/form/templates/form_sidebar.html
+++ b/frappe/public/js/frappe/form/templates/form_sidebar.html
@@ -44,7 +44,9 @@
 	<li class="divider"></li>
 	<li class="h6 attachments-label">{%= __("Attachments") %}</li>
 	<li><a class="strong add-attachment">{%= __("Attach File") %}
-		<i class="octicon octicon-plus" style="margin-left: 2px;"></i></li></a>
+		<i class="octicon octicon-plus" style="margin-left: 2px;"></i></a></li>
+	<li><a class="strong add-gsuite">{%= __("Create GSuite Document") %}
+		<i class="octicon octicon-plus" style="margin-left: 2px;"></i></a></li>
 </ul>
 <ul class="list-unstyled sidebar-menu">
 	<li class="divider"></li>
