--- a/frappe/templates/includes/comments/comments.html
+++ b/frappe/templates/includes/comments/comments.html
@@ -93,12 +93,12 @@
 			}
 
 			if(!args.comment_by_fullname || !args.comment_by || !args.comment) {
-				frappe.msgprint("All fields are necessary to submit the comment.")
+				frappe.msgprint(__("All fields are necessary to submit the comment."));
 				return false;
 			}
 
 			if (args.comment_by!=='Administrator' && !valid_email(args.comment_by)) {
-				frappe.msgprint("Please enter a valid email address.");
+				frappe.msgprint(__("Please enter a valid email address."));
 				return false;
 			}
 
