[wip] attach image control cleanup

--- a/frappe/desk/page/setup_wizard/setup_wizard.css
+++ b/frappe/desk/page/setup_wizard/setup_wizard.css
@@ -102,16 +102,28 @@
 }
 
 .setup-wizard-slide .frappe-control[data-fieldtype="Attach Image"] {
+	/*hardcoded measures*/
+	width: 140px;
+	/*to change as per removing heading*/
+	height: 180px;
 	text-align: center;
+}
+
+.setup-wizard-slide .frappe-control[data-fieldtype="Attach Image"] .form-control {
+	display: none;
 }
 
 .setup-wizard-slide .missing-image,
 .setup-wizard-slide .attach-image-display {
 	display: block;
 	position: relative;
-	left: 50%;
-	transform: translate(-50%, 0);
-	-webkit-transform: translate(-50%, 0);
+	border-radius: 4px;
+}
+
+.setup-wizard-slide .missing-image {
+	border: 1px solid #d1d8dd;
+    border-radius: 6px;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
 }
 
 .setup-wizard-slide .missing-image .octicon {
@@ -120,6 +132,40 @@
 	transform: translate(0px, -50%);
 	-webkit-transform: translate(0px, -50%);
 }
+
+/*commonify container and overlay*/
+
+.setup-wizard-slide .img-container {
+	height: 100%;
+    width: 100%;
+    padding: 2px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+	border: 1px solid #d1d8dd;
+    border-radius: 6px;
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+}
+
+.setup-wizard-slide .img-overlay {
+	display: flex;
+    align-items: center;
+    justify-content: center;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	color: #777777;
+	background-color: rgba(255, 255, 255, 0.7);
+	opacity: 0;
+}
+
+.setup-wizard-slide .img-overlay:hover {
+	opacity: 1;
+	cursor: pointer;
+}
+
+/*=================================*/
 
 .setup-wizard-message-image {
 	margin: 15px auto;
