--- a/frappe/public/css/form.css
+++ b/frappe/public/css/form.css
@@ -530,6 +530,18 @@ select.form-control {
   font-weight: bold;
   background-color: #fffdf4;
 }
+.form-control[data-fieldtype="Password"] {
+  position: inherit;
+}
+.password-strength-indicator {
+  float: right;
+  padding: 15px;
+  margin-top: -41px;
+  margin-right: -7px;
+}
+.password-strength-message {
+  margin-top: -10px;
+}
 .form-headline {
   padding: 0px 15px;
   margin: 0px;
