--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -666,6 +666,21 @@ select.form-control {
 	background-color: @extra-light-yellow;
 }
 
+.form-control[data-fieldtype="Password"] {
+	position: inherit;
+}
+
+.password-strength-indicator {
+    float: right;
+    padding: 15px;
+    margin-top: -41px;
+    margin-right: -7px;
+}
+
+.password-strength-message {
+	margin-top: -10px;
+}
+
 .form-headline {
 	padding: 0px 15px;
 	margin: 0px;
