[PDF] Wrap long text (frappe/erpnext#9107)

--- a/frappe/templates/styles/standard.css
+++ b/frappe/templates/styles/standard.css
@@ -54,6 +54,10 @@
 	margin-bottom: 5px;
 }
 
+.data-field .value {
+	word-wrap: break-word;
+}
+
 .important .value {
 	font-size: 120%;
 	font-weight: bold;
