--- a/frappe/templates/emails/new_message.html
+++ b/frappe/templates/emails/new_message.html
@@ -1,5 +1,5 @@
 <center>
-    <table align="center" bgcolor="#ededed" width="100%" border="0" cellpadding="0" cellspacing="0">
+    <table align="center" bgcolor="#fafbfc" width="100%" border="0" cellpadding="0" cellspacing="0">
     	<tr>
     		<td style="height: 20px;"></td>
     	</tr>
@@ -15,7 +15,7 @@
                             <table width="100%" border="0" cellpadding="0" cellspacing="0">
                                 <tr>
                                     <td width="80" style="width: 80px;">
-                                        <img src="http://localhost:8000/assets/erpnext/images/erp-logo.jpg" alt="ERPNext">
+                                        <img src="https://dl.dropboxusercontent.com/content_link/quUdjnI5tAjcZU059gBrCg4yerFWrGox3hRDqjeCT8XxZNokBV15gYvCUdQVsbc3/file" alt="ERPNext">
                                     </td>
                                     <td>
                                     	<p style="margin:0; padding:0; text-align:left;font-size: 12px; font-family: 'Arial'">ERPNext</p>
