--- a/frappe/templates/emails/password_reset.html
+++ b/frappe/templates/emails/password_reset.html
@@ -1,11 +1,11 @@
 <center>
-    <table align="center" bgcolor="#ededed" width="100%" border="0" cellpadding="0" cellspacing="0">
+    <table align="center" bgcolor="#fafbfc" width="100%" border="0" cellpadding="0" cellspacing="0">
     	<tr>
     		<td style="height: 20px;"></td>
     	</tr>
         <tr>
             <td align="center" valign="top">
-                <table bgcolor="#ffffff" width="100%" style="max-width: 600px;" border="0" cellpadding="0" cellspacing="0">
+                <table bgcolor="#ffffff" width="100%" style="border:1px solid #d1d8dd; max-width: 600px;" border="0" cellpadding="0" cellspacing="0">
                 	<tr>
                 		<td colspan=3 style="height:20px;"></td>
                 	</tr>
@@ -15,7 +15,7 @@
                             <table width="100%" border="0" cellpadding="0" cellspacing="0">
                                 <tr>
                                     <td width="80" style="width: 80px;">
-                                        <img src="http://localhost:8000/assets/erpnext/images/erp-logo.jpg" alt="ERPNext">
+                                        <img src="https://dl.dropboxusercontent.com/content_link/quUdjnI5tAjcZU059gBrCg4yerFWrGox3hRDqjeCT8XxZNokBV15gYvCUdQVsbc3/file" alt="ERPNext">
                                     </td>
                                     <td>
                                     	<p style="text-align:left; font-size: 12px; font-family: 'Verdana', 'Geneva', sans-serif">ERPNext</p>
