--- a/frappe/templates/emails/new_user.html
+++ b/frappe/templates/emails/new_user.html
@@ -1,17 +1,124 @@
-{% if title %}<h3>{{ title }}</h3>{% endif %}
-<p>{{_("Dear")}} {{ first_name }}{% if last_name %} {{ last_name}}{% endif %},</p>
-<p>{{_("A new account has been created for you at {0}").format(site_url)}}.</p>
-<p>{{_("Your login id is")}}: <b>{{ user }}</b>
-<p>{{_("Click on the link below to complete your registration and set a new password")}}.</p>
-
-<p style="margin: 30px 0px;">
-	<a href="{{ link }}" rel="nofollow" style="padding: 8px 20px; background-color: #7575ff; color: #fff; border-radius: 4px; text-decoration: none; line-height: 1; border-bottom: 3px solid rgba(0, 0, 0, 0.2); font-size: 14px; font-weight: 200;">{{ _("Complete Registration") }}</a>
-</p>
-
-{% if user_fullname != "Administrator" %}
-<br>
-<p>{{_("Thank you")}},<br>
-{{ user_fullname }}</p>
-{% endif %}
-<br>
-<p style="font-size: 85%;">{{_("You can also copy-paste this link in your browser")}} <a href="{{ link }}">{{ link }}</a></p>
+<center>
+    <table align="center" bgcolor="#fafbfc" width="100%" border="0" cellpadding="0" cellspacing="0">
+    	<tr>
+    		<td style="height: 20px;"></td>
+    	</tr>
+        <tr>
+            <td align="center" valign="top">
+                <table style="max-width: 600px;" bgcolor="#ffffff" width="100%" align="center" border="0" cellpadding="0" cellspacing="0">
+                	<tr>
+                		<td colspan=3 style="height:20px;"></td>
+                	</tr>
+                	<tr>
+                		<td style="width:20px;"></td>
+                		<td style="vertical-align: top">
+                            <table width="100%" border="0" cellpadding="0" cellspacing="0">
+                                <tr>
+                                    <td width="80" style="width: 80px;">
+                                        <img src="https://dl.dropboxusercontent.com/content_link/quUdjnI5tAjcZU059gBrCg4yerFWrGox3hRDqjeCT8XxZNokBV15gYvCUdQVsbc3/file" alt="ERPNext">
+                                    </td>
+                                    <td>
+                                    	<p style="margin:0; padding:0; text-align:left;font-size: 12px; font-family: 'Arial'">ERPNext</p>
+                                	</td>
+                                </tr>
+                            </table>
+                        </td>
+                		<td style="width:20px;"></td>
+                	</tr>
+                	<tr>
+                		<td colspan="3" style="border-bottom: 1px solid #d1d8dd; height:1px;"></td>
+                	</tr>
+                	<tr>
+                		<td style="width: 20px; vertical-align: top"></td>
+                		<td style="vertical-align: top;">
+                			<table width="100%" border="0" cellpadding="0" cellspacing="0">
+			                    <tr>
+			                        <td style="height: 30px;"></td>
+			                    </tr>
+			                    <tr>
+			                    	<td>
+										{% if title %}<h3 style="font-size: 14px; font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0; padding:0; text-align: left;">{{ title }}</h3>{% endif %}
+									</td>
+								</tr>
+								<tr>
+									<td style="height: 20px;"></td>
+								</tr>
+								<tr>
+			                        <td>
+			                        	<p style="font-size: 12px; font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0 0 15px; padding:0;text-align: left ">{{_("Dear")}} {{ first_name }}{% if last_name %} {{ last_name}}{% endif %},</p>
+			                        </td>
+								</tr>
+								<tr>
+			                        <td>
+										<p style="font-size: 12px; font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0 0 15px; padding:0; text-align: left;">{{_("A new account has been created for you at {0}").format(site_url)}}.</p>
+			                        </td>
+								</tr>
+								<tr>
+			                        <td style="height:10px;">
+										<p style="font-size: 12px; font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0 0 15px; padding:0; text-align: left;">{{_("Your login id is")}}: <b>{{ user }}</b></p>
+			                        </td>
+								</tr>
+								<tr>
+			                        <td style="height:10px;">
+										<p style="font-size: 12px; font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0 0 15px; padding:0; text-align: left;">{{_("Click on the link below to complete your registration and set a new password")}}.</p>
+			                        </td>
+								</tr>
+								<tr>
+									<td>
+										<p style="margin: 30px 0px;">
+											<a href="{{ link }}" rel="nofollow" style="padding: 8px 20px; background-color: #7575ff; color: #fff; border-radius: 4px; text-decoration: none; line-height: 1; border-bottom: 3px solid rgba(0, 0, 0, 0.2); font-size: 14px; outline:none; font-weight: 200;">{{ _("Complete Registration") }}</a>
+										</p>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										{% if user_fullname != "Administrator" %}
+											<p style="font-size: 12px; font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0 0 15px; padding:0; text-align: left;">{{_("Thank you")}},<br>
+											{{ user_fullname }}</p>
+										{% endif %}
+									</td>
+								</tr>
+								<tr>
+			                        <td style="height:10px;"></td>
+								</tr>
+								<tr>
+			                        <td>
+										<p style="font-size: 14px;  font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0; padding:0; text-align: left;">{{_("You can also copy-paste this link in your browser")}} <a style="color: #7575ff;text-decoration: none;" href="{{ link }}">{{ link }}</a></p>
+			                        </td>
+			                    </tr>
+                			</table>
+                		</td>
+                		<td style="width: 20px; vertical-align: top;"></td>
+                	</tr>
+                    <tr>
+                		<td colspan=3 style="height:50px;"></td>
+                	</tr>
+                	<tr>
+                		<td>
+                			<p style="font-size: 12px;  font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0; padding:0; text-align: left;">ERPNext is an Open Source with all features you need to run a small or medium sized business. <a style="color: #6c7680; text-decoration: none;" href="">Learn More</a></p>
+                		</td>
+                	</tr>
+                </table>
+            </td>
+        </tr>
+        <tr>
+        	<td align="center" valign="top" id="bodyCellFooter" class="unSubContent">
+				<table width="100%" border="0" cellpadding="0" cellspacing="0" id="templateContainerFooter">
+					<tbody>
+						<tr><td style="height: 20px;"></td></tr>
+						<tr>
+							<td valign="top" width="100%">
+								<h6 style="color:#8D99A6;font-family: 'Verdana', 'Geneva', sans-serif; text-align:center;margin-top: 10px;">Sent with &#9829; from ERPNext</h6>
+								<p style="color: #8D99A6; font-family: 'Verdana', 'Geneva', sans-serif; text-align:center;font-size: 10px;">D/324 Neelkanth Business Park, Vidyavihar West, Mumbai,
+								<br />
+								Maharashtra - 400086, India
+								</p>
+								<h6 style="font-family: 'Verdana', 'Geneva', sans-serif; font-size:10px;text-align:center;margin-top: 7px;"><a style="color:#8D99A6;font-weight: normal;" href="--unsubscribe--">Unsubscribe</a></h6>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</td>
+        </tr>
+    </table>
+</center>
