Kanban empty state frappe/erpnext#8849

--- a/frappe/public/css/kanban.css
+++ b/frappe/public/css/kanban.css
@@ -125,6 +125,10 @@
   width: 16px;
   height: 16px;
 }
+.kanban .kanban-empty-state {
+  width: 100%;
+  line-height: 400px;
+}
 body[data-route*="Kanban"] .modal .add-assignment:hover i {
   color: #36414C !important;
 }
