--- a/frappe/public/less/kanban.less
+++ b/frappe/public/less/kanban.less
@@ -153,6 +153,11 @@
 			height: 16px;
 		}
 	}
+
+	.kanban-empty-state {
+		width: 100%;
+		line-height: 400px;
+	}
 }
 
 body[data-route*="Kanban"] {
