[fix] grid.js and control.js. cleanup datepicker formatting and parsing

--- a/frappe/public/js/frappe/form/templates/grid_body.html
+++ b/frappe/public/js/frappe/form/templates/grid_body.html
@@ -12,10 +12,10 @@
         				<button type="reset"
 							class="grid-add-multiple-rows btn btn-xs btn-default hide"
                             style="margin-right: 10px;">
-                            {%= __("Add multiple rows") %}</a>
+                            {%= __("Add Multiple") %}</a>
 						<!-- hack to allow firefox include this in tabs -->
         				<button type="reset" class="btn btn-xs btn-default grid-add-row">
-                            {%= __("Add new row") %}</button>
+                            {%= __("Add Row") %}</button>
                     </div>
                     <div class="col-sm-6 text-right">
         				<a href="#" class="grid-download btn btn-xs btn-default hide"
