Configurable email template changes.

--- a/frappe/templates/emails/footer_template.html
+++ b/frappe/templates/emails/footer_template.html
@@ -10,7 +10,7 @@
                         <td style="width: 20px; vertical-align: top"></td>
                 	</tr>
                     <tr>
-                        <td colspan="3" style="height: 20px;"></td>
+                        <td colspan="3" height="20" valign="top" style="height: 20px;"></td>
                     </tr>
                 </table>
             </td>
@@ -23,13 +23,24 @@
 						<tr>
 							<td valign="top" width="100%">
 								<h6 style="color:#8D99A6;font-family: 'Verdana', 'Geneva', sans-serif; text-align:center;margin-top: 10px;">Sent with &#9829; from ERPNext</h6>
+                            </td>
+                        </tr>
+                        <tr><td height="20" style="height: 20px;"></td></tr>
+                        <tr>
+                            <td>
 								<p style="color: #8D99A6; font-family: 'Verdana', 'Geneva', sans-serif; text-align:center;font-size: 10px;">D/324 Neelkanth Business Park, Vidyavihar West, Mumbai,
-								<br />
-								Maharashtra - 400086, India
-								</p>
-								<h6 style="font-family: 'Verdana', 'Geneva', sans-serif; font-size:10px;text-align:center;margin-top: 7px;"><a style="color:#8D99A6;font-weight: normal;" href="--unsubscribe--">Unsubscribe</a></h6>
-							</td>
-						</tr>
+								    <br />
+								    Maharashtra - 400086, India
+								    </p>
+                            </td>
+                        </tr>
+                        <tr><td height="20" style="height: 20px;"></td></tr>
+                            <tr>
+                                <td>
+								    <h6 style="font-family: 'Verdana', 'Geneva', sans-serif; font-size:10px;text-align:center;margin-top: 7px;"><a style="color:#8D99A6;font-weight: normal;" href="--unsubscribe--">Unsubscribe</a></h6>
+							     </td>
+						    </tr>
+                        <tr><td style="height: 20px;"></td></tr>
 					</tbody>
 				</table>
 			</td>
