--- a/frappe/templates/emails/password_reset.html
+++ b/frappe/templates/emails/password_reset.html
@@ -19,7 +19,7 @@
             </tr>
             <tr>
                 <td>
-                	<p style="font-size: 12px; font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin: 0 0 15px; padding: 0;" √>{{_("Please click on the following link to set your new password")}}:</p>
+                	<p style="font-size: 12px; font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin: 0 0 15px; padding: 0;">{{_("Please click on the following link to set your new password")}}:</p>
                 </td>
             </tr>
             <tr>
