--- a/frappe/templates/emails/mentioned_in_comment.html
+++ b/frappe/templates/emails/mentioned_in_comment.html
@@ -1,7 +1,28 @@
-<p>
-	{{ _("{0} mentioned you in a comment in {1}").format(sender_fullname, link) }}
-</p>
-<blockquote
-	style="border-left: 3px solid #d1d8dd; padding: 7px 15px; margin-left: 0px;">
-	{{ comment.content | markdown }}
-</blockquote>
+
+<tr>
+	<td style="width: 20px; vertical-align: top"></td>
+	<td style="vertical-align: top;">
+		<table width="100%" border="0" cellpadding="0" cellspacing="0">
+            <tr>
+                <td style="height: 20px;">
+                </td>
+            </tr>
+            <tr>
+            	<td>
+					<h3 style="font-size: 14px; font-family: 'Verdana', 'Geneva', sans-serif; color: #36414C;margin: 0 0 15px; padding: 0;">{{_("Mentioned in a comment")}}</h3>
+				</td>
+			</tr>
+			<tr>
+                <td>
+                	<p style="font-size: 12px; font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680; margin: 0 0 15px; padding: 0;">{{ _("{0} mentioned you in a comment in {1}").format(sender_fullname, link) }}</p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                	<blockquote style="font-size: 12px; font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin: 0 0 15px; padding: 0;">{{ comment.content | markdown }}</blockquote>
+                </td>
+			</tr>
+		</table>
+	</td>
+	<td style="width: 20px; vertical-align: top;"></td>
+</tr>
