--- a/frappe/templates/emails/print_link.html
+++ b/frappe/templates/emails/print_link.html
@@ -1,3 +1,17 @@
-<p>
-	<a href="{{ url }}/{{ doctype }}/{{ name }}?format={{ print_format|urlencode }}&key={{ key|urlencode }}">{{ _("View this in your browser") }}</a>
-</p>
+<tr>
+	<td style="width: 20px; vertical-align: top"></td>
+	<td style="vertical-align: top;">
+		<table width="100%" border="0" cellpadding="0" cellspacing="0">
+            <tr>
+                <td style="height: 20px;">
+                </td>
+            </tr>
+            <tr>
+            	<td>
+					<p><a href="{{ url }}/{{ doctype }}/{{ name }}?format={{ print_format|urlencode }}&key={{ key|urlencode }}">{{ _("View this in your browser") }}</a></p>
+				</td>
+			</tr>
+		</table>
+	</td>
+	<td style="width: 20px; vertical-align: top;"></td>
+</tr>
