Updated logo for email template and updated base template, font-family changed to erpnext default.

--- a/frappe/templates/emails/new_message.html
+++ b/frappe/templates/emails/new_message.html
@@ -20,7 +20,7 @@
                 </td>
         	</tr>
         	<tr>
-                <td>
+                <td style="font-size: 14px;  font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0; padding:0; text-align: left;">
         			<p style="font-size: 12px; font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0 0 15px; padding:0; text-align: left;">{{ message }}</p>
                 </td>
         	</tr>
@@ -29,7 +29,7 @@
                 </td>
         	</tr>
         	<tr>
-                <td>
+                <td style="font-size: 14px;  font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0; padding:0; text-align: left;">
         			<p style="font-size: 14px;  font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0; padding:0; text-align: left;"><a style="color: #7575ff;text-decoration: none;" href="{{ link }}">Login and view in Browser</a></p>
                 </td>
             </tr>
