--- a/frappe/templates/emails/base_email.html
+++ b/frappe/templates/emails/base_email.html
@@ -1,75 +1,18 @@
-<center>
-    <table align="center" bgcolor="#fafbfc" width="100%" border="0" cellpadding="0" cellspacing="0">
-    	<tr>
-    		<td style="height: 20px;"></td>
-    	</tr>
-        <tr>
-            <td align="center" valign="top">
-                <table style="max-width: 600px;" bgcolor="#ffffff" width="100%" align="center" border="0" cellpadding="0" cellspacing="0">
-                	<tr>
-                		<td colspan=3 style="height:20px;"></td>
-                	</tr>
-                	<tr>
-                		<td style="width:20px;"></td>
-                		<td style="vertical-align: top">
-                            <table width="100%" border="0" cellpadding="0" cellspacing="0">
-                                <tr>
-                                    <td width="80" style="width: 80px;">
-                                        <img src="https://dl.dropboxusercontent.com/content_link/quUdjn
-                                        I5tAjcZU059gBrCg4yerFWrGox3hRDqjeCT8XxZNokBV15gYvCUdQVsbc3/file" alt="ERPNext">
-                                    </td>
-                                    <td>
-                                    	<p style="margin:0; padding:0; text-align:left;font-size: 12px; font-family: 'Arial'">ERPNext</p>
-                                	</td>
-                                </tr>
-                            </table>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td colspan="3" style="border-bottom: 1px solid #d1d8dd; height:1px;"></td>
-                    </tr>
-                    <!-- End of header block -->
-                    <!-- Email Content -->
-                    <tr>
-                        <td style="width:20px;"></td>
+{% include 'frappe/templates/emails/header_template.html' %}
 
-                        <td>{{content}}</td>
-                        <td style="width:20px;"></td>
-                    </tr>
-                    <!-- End of content -->
-                    <!-- Footer block -->
-                    <tr>
-                        <td colspan=3 style="height:50px;"></td>
-                    </tr>
-                    <tr>
-                        <td style="width: 20px; vertical-align: top"></td>
-                        <td >
-                            <p style="font-size: 12px;  font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0; padding:0; text-align: left;">ERPNext is an Open Source with all features you need to run a small or medium sized business. <a style="color: #6c7680; text-decoration: none;" href="">Learn More</a></p>
-                        </td>
-                        <td style="width: 20px; vertical-align: top"></td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-        <tr>
-            <td align="center" valign="top" id="bodyCellFooter" class="unSubContent">
-                <table width="100%" border="0" cellpadding="0" cellspacing="0" id="templateContainerFooter">
-                    <tbody>
-                        <tr><td style="height: 20px;"></td></tr>
-                        <tr>
-                            <td valign="top" width="100%">
-                                <h6 style="color:#8D99A6;font-family: 'Verdana', 'Geneva', sans-serif; text-align:center;margin-top: 10px;">Sent with &#9829; from ERPNext</h6>
-                                <p style="color: #8D99A6; font-family: 'Verdana', 'Geneva', sans-serif; text-align:center;font-size: 10px;">D/324 Neelkanth Business Park, Vidyavihar West, Mumbai,
-                                <br />
-                                Maharashtra - 400086, India
-                                </p>
-                                <h6 style="font-family: 'Verdana', 'Geneva', sans-serif; font-size:10px;text-align:center;margin-top: 7px;"><a style="color:#8D99A6;font-weight: normal;" href="--unsubscribe--">Unsubscribe</a></h6>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </td>
-        </tr>
-    </table>
-</center>
-<!-- End of footer -->
+<!-- End of header block -->
+    <!-- Email Content -->
+
+    <tr>
+        <td colspan="3" style="height:20px;"></td>
+    </tr>
+    <tr>
+        <td style="width:20px;"></td>
+
+        <td>{{content}}</td>
+        <td style="width:20px;"></td>
+    </tr>
+    <!-- End of content -->
+<!-- Footer block -->
+{% include 'frappe/templates/emails/footer_template.html' %}
+<!-- End Footer block -->
