--- a/frappe/templates/emails/footer_template.html
+++ b/frappe/templates/emails/footer_template.html
@@ -1,49 +1,39 @@
-
+<!-- Footer block -->
                     <tr>
-                		<td colspan=3 style="height:50px;"></td>
-                	</tr>
-                	<tr>
-                        <td style="width: 20px; vertical-align: top"></td>
-                		<td >
-                			<p style="font-size: 12px;  font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0; padding:0; text-align: left;">ERPNext is an Open Source with all features you need to run a small or medium sized business. <a style="color: #6c7680; text-decoration: none;" href="">Learn More</a></p>
-                		</td>
-                        <td style="width: 20px; vertical-align: top"></td>
-                	</tr>
+                        <td colspan=3 style="height:50px;"></td>
+                    </tr>
                     <tr>
-                        <td colspan="3" height="20" valign="top" style="height: 20px;"></td>
+                        <td style="width: 20px; vertical-align: top"></td>
+                        <td >
+                            <p style="font-size: 12px;  font-family: '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;; color: #6c7680;margin:0; padding:0; text-align: left;">ERPNext is an Open Source with all features you need to run a small or medium sized business. <a style="color: #6c7680; text-decoration: none;" href="">Learn More</a></p>
+                        </td>
+                        <td style="width: 20px; vertical-align: top"></td>
+                    </tr>
+                    <tr>
+                        <td colspan=3 style="height:20px;"></td>
                     </tr>
                 </table>
             </td>
         </tr>
         <tr>
-        	<td align="center" valign="top" id="bodyCellFooter" class="unSubContent">
-				<table width="100%" border="0" cellpadding="0" cellspacing="0" id="templateContainerFooter">
-					<tbody>
-						<tr><td style="height: 20px;"></td></tr>
-						<tr>
-							<td valign="top" width="100%">
-								<h6 style="color:#8D99A6;font-family: 'Verdana', 'Geneva', sans-serif; text-align:center;margin-top: 10px;">Sent with &#9829; from ERPNext</h6>
-                            </td>
-                        </tr>
-                        <tr><td height="20" style="height: 20px;"></td></tr>
-                        <tr>
-                            <td>
-								<p style="color: #8D99A6; font-family: 'Verdana', 'Geneva', sans-serif; text-align:center;font-size: 10px;">D/324 Neelkanth Business Park, Vidyavihar West, Mumbai,
-								    <br />
-								    Maharashtra - 400086, India
-								    </p>
-                            </td>
-                        </tr>
-                        <tr><td height="20" style="height: 20px;"></td></tr>
-                            <tr>
-                                <td>
-								    <h6 style="font-family: 'Verdana', 'Geneva', sans-serif; font-size:10px;text-align:center;margin-top: 7px;"><a style="color:#8D99A6;font-weight: normal;" href="--unsubscribe--">Unsubscribe</a></h6>
-							     </td>
-						    </tr>
+            <td align="center" valign="top" id="bodyCellFooter" class="unSubContent">
+                <table width="100%" border="0" cellpadding="0" cellspacing="0" id="templateContainerFooter">
+                    <tbody>
                         <tr><td style="height: 20px;"></td></tr>
-					</tbody>
-				</table>
-			</td>
+                        <tr>
+                            <td valign="top" width="100%">
+                                <h6 style="color:#8D99A6;font-family: '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; text-align:center;margin-top: 10px; margin-bottom: 0;">Sent with &#9829; from ERPNext</h6>
+                                <p style="color: #8D99A6; font-family: '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; text-align:center;font-size: 10px;">D/324 Neelkanth Business Park, Vidyavihar West, Mumbai,
+                                <br />
+                                Maharashtra - 400086, India
+                                </p>
+                                <h6 style="font-family: '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size:10px;text-align:center;margin-top: 7px;"><a style="color:#8D99A6;font-weight: normal;" href="unsubscribe">Unsubscribe</a></h6>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </td>
         </tr>
     </table>
 </center>
+<!-- End of footer -->
