--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -293,6 +293,15 @@ h6.uppercase, .h6.uppercase {
 	background-color: #e74c3c;
 }
 
+.address-box {
+	background-color: @light-bg;
+	padding: 0px 15px;
+	margin: 15px 0px;
+	border: 1px solid @border-color;
+	border-radius: 3px;
+	font-size: 12px;
+}
+
 .timeline {
 	margin: 30px 0px;
 
@@ -356,7 +365,7 @@ h6.uppercase, .h6.uppercase {
 
 	.media-body {
 		border: 1px solid @border-color;
-		border-radius: 2px;
+		border-radius: 3px;
 		margin-left: -7px;
 		position: relative;
 
@@ -502,7 +511,7 @@ h6.uppercase, .h6.uppercase {
 	background-color: white;
 	// padding: 15px 30px;
 	border: 1px solid @border-color;
-	border-radius: 2px;
+	border-radius: 3px;
 	position: relative;
 	z-index: 1;
 
