Added premailer, redesigne html templates in frappe.

--- a/frappe/templates/emails/auto_reply.html
+++ b/frappe/templates/emails/auto_reply.html
@@ -1,6 +1,6 @@
 
 <tr>
-	<td style="width: 20px; vertical-align: top"></td>
+	<td class="v-spacer"></td>
 	<td style="vertical-align: top;">
 		<table width="100%" border="0" cellpadding="0" cellspacing="0">
             <tr>
@@ -8,27 +8,27 @@
             </tr>
             <tr>
             	<td>
-					<h3 style="font-size: 14px; font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0; padding:0; text-align: left;">{{ _("Thank you for your email") }}/h3>
+					<h3>{{ _("Thank you for your email") }}/h3>
 				</td>
 			</tr>
 			<tr>
-				<td><p style="font-size: 12px; font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0 0 15px; padding:0;text-align: left;">{{ _("Your query has been received. We will reply back shortly. If you have any additional information, please reply to this mail.") }}</p></td>
+				<td><p>{{ _("Your query has been received. We will reply back shortly. If you have any additional information, please reply to this mail.") }}</p></td>
 			</tr>
 			<tr>
                 <td>
-                	<p style="font-size: 12px; font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0 0 15px; padding:0;text-align: left ">{{ _("Reference: {0} {1}").format(reference_doctype, reference_name) }}</p>
+                	<p>{{ _("Reference: {0} {1}").format(reference_doctype, reference_name) }}</p>
                 </td>
 			</tr>
 			<tr>
                 <td>
-					<p style="font-size: 10px; font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0 0 15px; padding:0; text-align: left;">{{ _("This is an automatically generated reply") }}</p>
+					<p>{{ _("This is an automatically generated reply") }}</p>
                 </td>
 			</tr>
 			<tr>
-                <td style="height:10px;">
+                <td class="h-spacer">
                 </td>
 			</tr>
 		</table>
 	</td>
-	<td style="width: 20px; vertical-align: top;"></td>
+	<td class="v-spacer"></td>
 </tr>
