--- a/frappe/templates/emails/new_message.html
+++ b/frappe/templates/emails/new_message.html
@@ -1,41 +1,41 @@
 <!-- Include header part -->
     <tr>
-        <td style="width: 20px; vertical-align: top"></td>
-        <td style="vertical-align: top;">
-        <table width="100%" border="0" cellpadding="0" cellspacing="0">
-            <tr>
-                <td style="height: 30px;"></td>
-            </tr>
-            <tr>
-            	<td>
-        			<h3 style="font-size: 14px; font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0; padding:0; text-align: left;">New Message</h3>
-        		</td>
-        	</tr>
-        	<tr>
-        		<td style="height: 20px;"></td>
-        	</tr>
-        	<tr>
-                <td>
-                	<p style="font-size: 12px; font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0 0 15px; padding:0;text-align: left ">You have a new message from: <b>{{ from }}</b></p>
-                </td>
-        	</tr>
-        	<tr>
-                <td style="font-size: 14px;  font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0; padding:0; text-align: left;">
-        			<p style="font-size: 12px; font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0 0 15px; padding:0; text-align: left;">{{ message }}</p>
-                </td>
-        	</tr>
-        	<tr>
-                <td style="height:10px;">
-                </td>
-        	</tr>
-        	<tr>
-                <td style="font-size: 14px;  font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0; padding:0; text-align: left;">
-        			<p style="font-size: 14px;  font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0; padding:0; text-align: left;"><a style="color: #7575ff;text-decoration: none;" href="{{ link }}">Login and view in Browser</a></p>
-                </td>
-            </tr>
-        </table>
+        <td class="v-spacer"></td>
+        <td>
+            <table width="100%" border="0" cellpadding="0" cellspacing="0">
+                <tr>
+                    <td class="h-spacer"></td>
+                </tr>
+                <tr>
+                	<td>
+            			<h3>New Message</h3>
+            		</td>
+            	</tr>
+            	<tr>
+            		<td class="h-spacer"></td>
+            	</tr>
+            	<tr>
+                    <td>
+                    	<p>You have a new message from: <b>{{ from }}</b></p>
+                    </td>
+            	</tr>
+            	<tr>
+                    <td>
+            			<p>{{ message }}</p>
+                    </td>
+            	</tr>
+            	<tr>
+                    <td class="h-spacer">
+                    </td>
+            	</tr>
+            	<tr>
+                    <td>
+            			<p><a style="color: #7575ff;text-decoration: none;" href="{{ link }}">Login and view in Browser</a></p>
+                    </td>
+                </tr>
+            </table>
         </td>
-        <td style="width: 20px; vertical-align: top;"></td>
+        <td class="v-spacer" style="width: 20px; vertical-align: top;"></td>
     </tr>
 
 <!-- Include footer part -->
