--- a/frappe/templates/emails/base_email.html
+++ b/frappe/templates/emails/base_email.html
@@ -1,18 +1,200 @@
-{% include 'frappe/templates/emails/header_template.html' %}
+<style type="text/css">
+h1,
+h2,
+h3,
+h4, 
+h5, 
+h6,
+p,
+span,
+div,
+li,
+blockquote {
+    font-family: -apple-system, BlinkMacSystemFont,
+        "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+        "Fira Sans", "Droid Sans", "Helvetica Neue",
+        sans-serif;
+        padding: 0;
+        margin: 0;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6, {
+    color: #6c7680;
+    margin: 0;
+    padding: 0;
+}
 
-<!-- End of header block -->
-    <!-- Email Content -->
+h1 {
+  font-size: 24px;
+}
+h2 {
+  font-size: 20px;
+}
+h3 {
+  font-size: 18px;
+  color: #36414C;
+}
+h4 {
+  font-size: 16px;
+  color: #36414C;
+}
+h5 {
+  font-size: 14px;
+}
+h6 {
+  font-size: 12px;
+}
+p,
+blockquote {
+    color: #6c7680;
+    font-size: 14px;
+    margin: 0 0 10px;
+}
+p.small {
+    font-size: 10px;
+}
+p.italic {
+    font-style: italic;
+}
+a {
+    color: #6c7680;
+    outline: none;
+    text-decoration: none;
+}
+.brand-name {
+    font-size: 14px;
+}
+a.grey {
+    color: #6c7680;
+}
+.footer {
+    color: #8d99a6;
+}
+.footer a {
+    color: #8d99a6;
+}
+.footer h6,
+.footer p {
+    font-size: 10px;
+    text-align: center;
+    margin-top: 10px;
+    padding: 0;
+}
+.center-align {
+    text-align: center;
+}
+img {
+    border: 0;
+    outline: none;
+}
+td {
+    font-size: 14px;
+}
+td.v-spacer {
+    font-size: 0;
+    line-height: 0;
+    width: 20px;
+    vertical-align: top;
+}
+td.h-spacer {
+    font-size: 0;
+    line-height: 0;
+    height: 20px;
+    vertical-align: top;
+}
+.h-spacer-lg {
+    height: 50px;
+}
+th {
+    font-size: 14px;
+}
+table.inner {
+    width: 100%;
+    max-width: 600px;
+    border: 0;
+    border: 1px solid #d1d8dd;
+    background-color: #fff; 
+}
+table.wrapper {
+    background: #fafbfc;
+    width: 100%;
+}
+.bordered-vspace {
+    height: 20px;
+    border-bottom: 1px solid #d1d8dd;
+}
+.primary-btn {
+    padding: 8px 20px; 
+    background-color: #7575ff; 
+    color: #fff; 
+    border-radius: 4px; 
+    text-decoration: none; 
+    line-height: 1; 
+    border-bottom: 3px solid rgba(0, 0, 0, 0.2); 
+    font-size: 14px; 
+    outline:none; font-weight: 200;
+}
+.rating {
+    font-size: 20px; 
+    text-decoration: none; 
+    color: grey; 
+}
+</style>
+<center>
+    <table class="wrapper" align="center" width="100%" border="0" cellpadding="0" cellspacing="0">
+        <tr>
+            <td class="h-spacer"></td>
+        </tr>
+        <tr>
+            <td>
+                <table class="inner" width="100%" align="center" border="0" cellpadding="0" cellspacing="0">
+                    <tr>
+                        <td colspan="3" class="h-spacer"></td>
+                    </tr>
+                    {% include 'frappe/templates/emails/header_template.html' %}
 
-    <tr>
-        <td colspan="3" style="height:20px;"></td>
-    </tr>
-    <tr>
-        <td style="width:20px;"></td>
+                    <!-- End of header block -->
 
-        <td>{{content}}</td>
-        <td style="width:20px;"></td>
-    </tr>
-    <!-- End of content -->
+                    <tr>
+                        <td colspan="3" class="bordered-vspace"></td> <!-- Vertical space td -->
+                    </tr>
+                    <!-- Email Content -->
+
+                    <tr>
+                        <td colspan="3" class="h-spacer"></td> <!-- Vertical space td -->
+                    </tr>
+
+                    <tr>
+                        <td style="width:20px;"></td>
+
+                        <td valign="top">{{content}}</td>
+
+                        <td style="width:20px;"></td>
+                    </tr>
+                    <!-- End of content -->
+                    <tr>
+                        <td colspan=3 class="h-spacer-lg"></td>
+                    </tr>
+                    <tr>
+                        <td class="h-spacer"></td>
+                        <td>
+                            <p>ERPNext is an Open Source with all features you need to run a small or medium sized business. <a href="https://erpnext.com/">Learn More</a></p>
+                        </td>
+                        <td style="width: 20px; vertical-align: top"></td>
+                    </tr>
+                    <tr>
+                        <td colspan=3 style="height:20px;"></td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
 <!-- Footer block -->
 {% include 'frappe/templates/emails/footer_template.html' %}
 <!-- End Footer block -->
+        <tr><td class="h-spacer"></td></tr>
+    </table>
+</center>
