--- a/frappe/templates/emails/mentioned_in_comment.html
+++ b/frappe/templates/emails/mentioned_in_comment.html
@@ -1,7 +1,7 @@
 
 <tr>
-	<td style="width: 20px; vertical-align: top"></td>
-	<td style="vertical-align: top;">
+	<td class="v-spacer"></td>
+	<td>
 		<table width="100%" border="0" cellpadding="0" cellspacing="0">
             <tr>
                 <td style="height: 20px;">
@@ -9,20 +9,20 @@
             </tr>
             <tr>
             	<td>
-					<h3 style="font-size: 14px; font-family: 'Verdana', 'Geneva', sans-serif; color: #36414C;margin: 0 0 15px; padding: 0;">{{_("Mentioned in a comment")}}</h3>
+					<h3>{{_("Mentioned in a comment")}}</h3>
 				</td>
 			</tr>
 			<tr>
                 <td>
-                	<p style="font-size: 12px; font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680; margin: 0 0 15px; padding: 0;">{{ _("{0} mentioned you in a comment in {1}").format(sender_fullname, link) }}</p>
+                	<p>{{ _("{0} mentioned you in a comment in {1}").format(sender_fullname, link) }}</p>
                 </td>
             </tr>
             <tr>
                 <td>
-                	<blockquote style="font-size: 12px; font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin: 0 0 15px; padding: 0;">{{ comment.content | markdown }}</blockquote>
+                	<blockquote>{{ comment.content | markdown }}</blockquote>
                 </td>
 			</tr>
 		</table>
 	</td>
-	<td style="width: 20px; vertical-align: top;"></td>
+	<td class="v-spacer"></td>
 </tr>
