--- a/frappe/templates/emails/password_update.html
+++ b/frappe/templates/emails/password_update.html
@@ -1,35 +1,35 @@
 
 <tr>
-	<td style="width: 20px; vertical-align: top"></td>
+	<td class="v-spacer"></td>
 	<td style="vertical-align: top;">
 		<table width="100%" border="0" cellpadding="0" cellspacing="0">
             <tr>
-                <td style="height: 30px;"></td>
+                <td class="h-spacer"></td>
             </tr>
             <tr>
             	<td>
-					<h3 style="font-size: 14px; font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0; padding:0; text-align: left;">{{_("Password Update Notification")}}</h3>
+					<h3>{{_("Password Update Notification")}}</h3>
 				</td>
 			</tr>
             <tr>
                 <td>
-                    <p style="font-size: 12px; font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0 0 15px; padding:0;text-align: left ">{{_("Dear")}} {{ first_name }}{% if last_name %} {{ last_name}}{% endif %},</p>
+                    <p>{{_("Dear")}} {{ first_name }}{% if last_name %} {{ last_name}}{% endif %},</p>
                 </td>
             </tr>
 			<tr>
-				<td><p style="font-size: 12px; font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0 0 15px; padding:0;text-align: left;">{{_("Your password has been updated. Here is your new password")}}: {{ new_password }}</p></td>
+				<td><p>{{_("Your password has been updated. Here is your new password")}}: {{ new_password }}</p></td>
 			</tr>
 			<tr>
                 <td>
-					<p style="font-size: 12px; font-family: 'Verdana', 'Geneva', sans-serif; color: #6c7680;margin:0 0 15px; padding:0; text-align: left;">{{_("Thank you")}},<br>
+					<p>{{_("Thank you")}},<br>
 					{{ user_fullname }}</p>
                 </td>
 			</tr>
 			<tr>
-                <td style="height:10px;">
+                <td class="h-spacer">
                 </td>
 			</tr>
 		</table>
 	</td>
-	<td style="width: 20px; vertical-align: top;"></td>
+	<td class="v-spacer"></td>
 </tr>
