--- a/frappe/templates/emails/print_link.html
+++ b/frappe/templates/emails/print_link.html
@@ -1,5 +1,5 @@
 <tr>
-	<td style="width: 20px; vertical-align: top"></td>
+	<td class="v-spacer"></td>
 	<td style="vertical-align: top;">
 		<table width="100%" border="0" cellpadding="0" cellspacing="0">
             <tr>
@@ -13,5 +13,5 @@
 			</tr>
 		</table>
 	</td>
-	<td style="width: 20px; vertical-align: top;"></td>
+	<td class="v-spacer"></td>
 </tr>
