--- a/frappe/templates/emails/password_reset.html
+++ b/frappe/templates/emails/password_reset.html
@@ -14,11 +14,19 @@
 	            </tr>
 	            <tr>
 	                <td>
-	                	<p>{{_("Please click on the following link to set your new password")}}:</p>
+	                	<p>{{_("You are recieving this email because you requested a new password for your ERPNext account.")}}:</p>
 	                </td>
 	            </tr>
+	            <tr><td class="h-spacer"></td></tr>
 	            <tr>
-	                <td><p><a style="color: #7575ff;text-decoration: none;" href="{{ link }}">{{ link }}</a></p></td>
+	                <td><p><a class="primary-btn" href="{{ link }}">Reset Password</a></p></td>
+				</tr>
+	            <tr><td class="h-spacer"></td></tr>
+	            <tr>
+	                <td>
+	                	<p class="font-12">Or you can copy and paste this link in your browser:</p>
+	                	<p class="font-12"><a href="{{ link }}">{{ link }}</a></p>
+                	</td>
 				</tr>
 				<tr>
 	                <td class="h-spacer">
