--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -249,7 +249,7 @@ h6.uppercase, .h6.uppercase {
 
 .form-section:not(:last-child),
 .form-inner-toolbar {
-	border-bottom: 1px solid @light-border-color;
+	border-bottom: 1px solid @border-color;
 }
 
 .empty-section {
