--- a/frappe/public/less/list.less
+++ b/frappe/public/less/list.less
@@ -54,7 +54,7 @@
 }
 
 .filter-box {
-	border-top: 1px solid @border-color;
+	border-bottom: 1px solid @border-color;
 	// margin: 0px -15px;
 	padding: 10px 15px 3px;
 
@@ -316,6 +316,12 @@
 		right: 5px;
 		color: @text-color;
 		font-size: 11px;
+	}
+}
+
+.page-form {
+	.awesomplete > ul {
+		min-width: 300px;
 	}
 }
 
