--- a/frappe/public/less/website.less
+++ b/frappe/public/less/website.less
@@ -720,3 +720,9 @@ li.footer-child-item {
 		margin-top: 30px;
 	}
 }
+
+.bordered {
+	border: 1px solid @border-color;
+	padding: 10px;
+	border-radius: 4px;
+}
