--- a/frappe/public/less/list.less
+++ b/frappe/public/less/list.less
@@ -445,7 +445,7 @@
 	.frequency-section {
 		background-color: #fafbfc;
 		border-bottom: 1px solid #d1d8dd;
-		height: 150px;
+		min-height: 150px;
 		padding: 15px;
 
 		.frequency-title {
@@ -464,10 +464,13 @@
 		border-radius: 2px;
 		padding: 10px;
 		margin-top: 10px;
-		width: 250px;
-		height: 85px;
+		margin-right: 10px;
+		width: 255px;
 
 		.goal-graphics {
+			margin-top: 10px;
+			padding: 10px 0px;
+
 			.inline-graph-count {
 				font-size: 20px;
 				padding: 0px 10px;
