--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -623,6 +623,7 @@ h6.uppercase, .h6.uppercase {
 
 .like-disabled-input.for-description {
 	font-weight: normal;
+	font-size: 12px;
 }
 
 .frappe-control& {
