Added new Color picker pallet for calendar

--- a/frappe/public/css/desk.css
+++ b/frappe/public/css/desk.css
@@ -995,3 +995,50 @@ input[type="checkbox"]:checked:before {
     visibility: visible;
   }
 }
+.color-picker {
+  position: relative;
+  z-index: 999;
+}
+.color-picker .color-picker-pallet {
+  border-radius: 4px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+  background: #fff;
+  border: 1px solid #d1d8dd;
+  display: none;
+  max-width: 305px;
+  padding: 5px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.color-picker .color-box {
+  cursor: pointer;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin: 0px 0 0 4px;
+  border: 1px solid rgba(0, 0, 0, 0.25);
+}
+.color-picker .color-picker-pallet:after,
+.color-picker .color-picker-pallet:before {
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  pointer-events: none;
+  position: absolute;
+  bottom: 100%;
+  left: 30px;
+}
+.color-picker .color-picker-pallet:after {
+  border-color: rgba(255, 255, 255, 0);
+  border-bottom-color: #fff;
+  border-width: 10px;
+  margin-left: -10px;
+}
+.color-picker .color-picker-pallet:before {
+  border-color: rgba(221, 221, 221, 0);
+  border-bottom-color: #d1d8dd;
+  border-width: 11px;
+  margin-left: -11px;
+}
