Extract header into separate file

--- a/frappe/templates/emails/standard.html
+++ b/frappe/templates/emails/standard.html
@@ -14,17 +14,7 @@
 				<table border="0" cellpadding="0" cellspacing="0" width="600" id="email_container">
 					<tr>
 						<td valign="top">
-							<table border="0" cellpadding="0" cellspacing="0" width="100%" id="email_header">
-								<tr>
-									<td width="35" height="50" style="border-bottom: 1px solid #d1d8dd;">
-										<img embed="erp-logo.jpg" width="24" height="24" style="display: block;"
-										 alt="ERPNext">
-									</td>
-									<td style="border-bottom: 1px solid #d1d8dd;">
-										<p>ERPNext</p>
-									</td>
-								</tr>
-							</table>
+							{{ header or "" }}
 						</td>
 					</tr>
 					<tr>
