[sales goal] in company; graph, notifs

--- a/frappe/public/js/frappe/form/templates/form_dashboard.html
+++ b/frappe/public/js/frappe/form/templates/form_dashboard.html
@@ -5,7 +5,7 @@
 		<div id="heatmap-{{ frappe.model.scrub(frm.doctype) }}"></div>
 		<div class="text-muted small heatmap-message hidden"></div>
 	</div>
-	<div class="form-chart form-dashboard-section hidden"></div>
+	<div class="form-graph form-dashboard-section hidden"></div>
 	<div class="form-stats form-dashboard-section hidden">
 		<div class="row"></div>
 	</div>
