--- a/frappe/public/css/form.css
+++ b/frappe/public/css/form.css
@@ -642,6 +642,86 @@ select.form-control {
     box-shadow: none;
   }
 }
+/* goals */
+.goals-page-container {
+  background-color: #fafbfc;
+  padding-top: 1px;
+}
+.goals-page-container .goal-container {
+  background-color: #fff;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  border-radius: 2px;
+  padding: 10px;
+  margin: 10px;
+}
+.graph-container .graphics {
+  margin-top: 10px;
+  padding: 10px 0px;
+}
+.graph-container .stats-group {
+  display: flex;
+  justify-content: space-around;
+  flex: 1;
+}
+.graph-container .stats-container {
+  display: flex;
+  justify-content: space-around;
+}
+.graph-container .stats-container .stats {
+  padding-bottom: 15px;
+}
+.graph-container .stats-container .stats-title {
+  color: #8D99A6;
+}
+.graph-container .stats-container .stats-value {
+  font-size: 25px;
+  font-weight: 300;
+}
+.graph-container .stats-container .stats-description {
+  font-size: 12px;
+  color: #8D99A6;
+}
+.graph-container .stats-container .total,
+.graph-container .stats-container .completed {
+  color: #98d85b;
+}
+.bar-graph .axis {
+  font-size: 10px;
+  fill: #6a737d;
+}
+.bar-graph .axis line {
+  stroke: rgba(27, 31, 35, 0.1);
+}
+.bar-graph g.mini {
+  fill: #98d85b;
+}
+.path {
+  fill: none;
+  stroke: #28a745;
+  stroke-opacity: 1;
+  stroke-width: 2px;
+}
+.line-graph .path {
+  fill: none;
+  stroke: #28a745;
+  stroke-opacity: 1;
+  stroke-width: 2px;
+}
+line.average {
+  stroke-dasharray: 5,3;
+}
+.tick.x-axis-label {
+  display: block;
+}
+.tick .average-text {
+  text-anchor: start;
+}
+.tick .y-value-text {
+  text-anchor: end;
+}
+.tick .x-value-text {
+  text-anchor: middle;
+}
 body[data-route^="Form/Communication"] textarea[data-fieldname="subject"] {
   height: 80px !important;
 }
